--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,11 @@
   ],
   "dependencies": {
     "x-tag-core": "^1.5.11",
-    "polymer": "^1.5.0"
+    "polymer": "^1.5.0",
+    "webcomponentsjs": "^0.7.22",
+    "paper-toast": "polymerelements/paper-toast#^1.3.0",
+    "paper-button": "polymerelements/paper-button#^1.0.12",
+    "iron-icon": "polymerelements/iron-icon#^1.0.8",
+    "iron-icons": "polymerelements/iron-icons#^1.1.3"
   }
 }
